# Android-Security-

./: Note.txt  Path.js  README.md  REAMMEFIRST.txt  package-lock.json  package.json  server.js
Sercurity_final_project/app/: CMakeLists.txt  build.gradle
Sercurity_final_project/app/src/androidTest/java/com/example/IrisREC/: ExampleInstrumentedTest.java
Sercurity_final_project/app/src/main/: AndroidManifest.xml
Sercurity_final_project/app/src/main/cpp/: FunctionAndVariable.h  Source.h  native-lib.cpp
Sercurity_final_project/app/src/main/java/com/example/IrisREC/Function/: FunctionImplement.java  FunctionInterface.java  IrisFunctionImplement.java  Iris_Function.java  NativeFunctionCall_IrisFunction.java
Sercurity_final_project/app/src/main/res/drawable/: add_user_edittext_design.xml  ic_baseline_birthday_24.xml  ic_baseline_calendar_today_24.xml  ic_baseline_supervised_user_circle_24.xml  login_button_design.xml  login_popup_window_button_design.xml  login_popup_window_design.xml  search_view_design.xml  side_nav_bar.xml
Sercurity_final_project/app/src/main/res/layout/: add_user_form.xml  check_iris_recognition_form.xml  gender_radio_button_design.xml  iris_information.xml  login_form.xml  login_popup_window.xml  main_form.xml  main_form_nav_drawer.xml  main_form_toolbar.xml  show_user_form.xml  test_layout.xml  user_card.xml
Sercurity_final_project/app/src/main/res/navigation/: mobile_navigation.xml
Sercurity_final_project/app/src/main/res/values/: strings.xml  themes.xml
Sercurity_final_project/app/src/test/java/com/example/IrisREC/: ExampleUnitTest.java
(+60 files in other folders)
